<resources>
    <string name="app_name">ZiMu</string>

    <string name="home">首页</string>
    <string name="subscibe">订阅</string>
    <string name="clas">课程</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>



    <string name="expert_subscribe_toolbar">咨询</string>
    <string name="city_orientation_edittext">请输入城市名称</string>
    <string name="current_orientation_textview">当前位置</string>
    <string name="current_orientation_button">杭州市</string>
    <string name="city_hot_textview">热门城市</string>
    <string name="city_hot_button">北京市</string>
    <string name="foreign_rb">国外</string>
    <string name="inland_rb">国内</string>
    <string name="subscibe1_rb">推荐</string>
    <string name="subscibe_rb">订阅</string>
    <string name="address_rb">杭州</string>
    <string name="field_rb">领域</string>
    <string name="price_rb">价格</string>
    <string name="more_rb">更多</string>
    <string name="myself_message">个人信息</string>
    <string name="correlation_class">相关课程</string>
    <string name="seek_Button_text">取消</string>
    <string name="searchView_hit_text">请输入搜索内容</string>
    <string name="recommend_text_rb">推荐</string>
    <string name="article_text_rb">文章</string>
    <string name="appraisal_text_rb">测评</string>
    <string name="class_text_rb">课程</string>
    <string name="fm_text_rb">FM</string>
    <string name="books_text_rb">书籍</string>

    <string name="event_theme">活动主题</string>

    <string name="tv_key_apply_event">一键报名</string>
    <string name="tv_nopoplefull_event">●人不满原路退款</string>
    <string name="tv_poplefull_event">●人满即可举办活动</string>
    <string name="tv_invite_event">●邀请好友报名</string>
    <string name="apply_notice_event">报名须知</string>
    <string name="tv_introduce_event">活动简介</string>
    <string name="tv_title_event">标题</string>


</resources>
