<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <EditText
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:hint="@string/city_orientation_edittext"

        android:paddingLeft="10dp"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:text="@string/current_orientation_textview"
        android:gravity="center_vertical"/>
    <Button android:layout_height="35dp"
            android:layout_width="70dp"

            android:text="@string/current_orientation_textview"
            android:layout_marginLeft="10px"/>
    <TextView android:layout_height="30dp"
              android:layout_width="match_parent"
              android:paddingLeft="10dp"
              android:text="@string/city_hot_textview"
              android:gravity="center_vertical"/>
    <Button android:layout_height="35dp"
            android:layout_width="70dp"

            android:text="@string/city_hot_textview"
            android:layout_marginLeft="10px"/>

</LinearLayout>