<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/_hoary"
    tools:context="com.zimu21.zimu.activity.EventActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/textSize_30"
            android:text="@string/tv_title_event"
            android:textColor="@color/black"
           />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTop_15"
                android:paddingLeft="@dimen/paddingTop_15"
                android:paddingRight="@dimen/paddingTop_15"
                android:background="@color/_white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_30"
                    android:text="@string/event_theme"
                    />
                <ImageView
                    android:id="@+id/icon_event"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@mipmap/ic_launcher"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_time_event"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:padding="@dimen/padding_6"
                        />
                    <TextView
                        android:id="@+id/tv_money_event"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_6"
                        android:textSize="@dimen/textSize_20"
                       />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_time_activity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:padding="@dimen/padding_6"
                        />
                    <TextView
                        android:id="@+id/tv_money_event1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_6"
                        android:textSize="@dimen/textSize_20"
                       />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_location_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/_white"
                android:paddingTop="@dimen/paddingTop_15"
                android:paddingLeft="@dimen/paddingTop_15"
                android:paddingRight="@dimen/paddingTop_15"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_icon1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"/>
                    <ImageView
                        android:id="@+id/iv_icon2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"/>
                    <ImageView
                        android:id="@+id/iv_icon3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"/>
                    <ImageView
                        android:id="@+id/iv_icon4"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"/>
                    <ImageView
                        android:id="@+id/iv_icon5"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_applypople_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_10"
                    android:paddingTop="@dimen/paddingTop_15"
                    android:paddingBottom="@dimen/paddingBottom_10"
                    android:gravity="center_horizontal"
                   />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTop_15"
                android:paddingLeft="@dimen/paddingTop_15"
                android:paddingRight="@dimen/paddingTop_15"
                android:paddingBottom="@dimen/paddingBottom_10"
                android:orientation="vertical"
                android:background="@color/_white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/down_arrow"
                    android:text="@string/tv_introduce_event"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/textSize_20"/>
                <TextView
                    android:id="@+id/tv_introduce_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:padding="@dimen/padding"
                    android:ellipsize="end"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:id="@+id/iv_down1_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/down_arrow"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/_hoary"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTop_15"
                android:paddingLeft="@dimen/paddingTop_15"
                android:paddingRight="@dimen/paddingTop_15"
                android:paddingBottom="@dimen/paddingBottom_10"
                android:orientation="vertical"
                android:background="@color/_white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/down_arrow"
                    android:text="@string/apply_notice_event"
                    android:textSize="@dimen/textSize_20"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:paddingTop="@dimen/paddingTop_15"
                    android:paddingBottom="@dimen/paddingBottom_10"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/tv_invite_event"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_invite_event"/>
                    <TextView
                        android:id="@+id/tv_poplefull_event"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_poplefull_event"/>
                    <TextView
                        android:id="@+id/tv_nopoplefull_event"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_nopoplefull_event"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingTop_15"
                    android:paddingBottom="@dimen/paddingBottom_10"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:id="@+id/iv_down2_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/down_arrow"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/_hoary"
                />
            <TextView
                android:id="@+id/tv_key_apply"
                android:background="@color/_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/paddingTop_15"
                android:paddingBottom="@dimen/paddingBottom_10"
                android:padding="@dimen/padding_10"
                android:textSize="@dimen/textSize_22"
                android:text="@string/tv_key_apply_event"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
